feat: allow formatless TBR engagements
