# backend/openapi.json
@@ -1827,6 +1827,18 @@
           "status": {
             "$ref": "#/components/schemas/ReadingStatus"
           },
+          "tbr_added_on": {
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "date"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Tbr Added On"
+          },
           "started_on": {
             "anyOf": [
               {
@@ -1950,6 +1962,7 @@
           "formats",
           "cover_url",
           "status",
+          "tbr_added_on",
           "started_on",
           "finished_on",
           "abandoned_on",
@@ -2041,6 +2054,18 @@
               }
             ],
             "title": "Length Override"
+          },
+          "tbr_added_on": {
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "date"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Tbr Added On"
           },
           "started_on": {
             "anyOf": [
